*Empty MediaWiki Message*

--- a/თემურლენგის_ლაშქრობები_საქართველოში.mw
+++ b/თემურლენგის_ლაშქრობები_საქართველოში.mw
@@ -2,8 +2,14 @@
 
 [[1387]] გაზაფხულზე თემურლენგი ურიცხვი ჯარით მეორეჯერ შემოესია საქართველოს. ბაგრატმა და გიორგიმ მოსახლეობა მიუდგომელ ადგილებში დახიზნეს და მომზადებული დახვდნენ მტერს, მიუხედავად სასტიკი წინააღმდეგობისა, თემურლენგმა მოახერხა საქართველოში შემოჭრა, მაგრამ მალე იძულებული გახდა უკან გაბრუნებულიყი ზურგიდან თოზთამიშის გამოჩენის გამო.
 
+[[1394]] თემურლენგი ორჯერ შემოესია საქართველოს. პირველად [[სამცხე-საათაბაგო|სამცხე-საათაბაგოს]] დაესხა თავს, მეორედ - [[არაგვის ხეობა|არაგვის ხეობას]]. ამჯერადაც თოხთამიშის გამოჩენებამ გააბრუნა იგი საქართველოდან. [[1399]] მიწურულს თემურლენგი მეხუთედ მოვიდა ამიერკავკასიაში და გამოსაზამთრებლად დაბანაკდა [[ყარაბაღი|ყარაბაღში]], საიდანაც რჩეული მხედრობით პირადად ილაშქრა ჰერეთ-კახეთში, საშინლად ააოხრა და გაძარცვა ეს მხარე. [[1400]] გაზაფხულზე თემურლენგი უზარმაზარი ლაშქრით მეექვსედ შემოიჭრა საქართველოში. გადაწყვეტილი ჰქონდა საქართველოს მთელი მოსახლეობის გათათრება ან პირწმინდად გაჟლეტა. ქართველები [[გიორგი VII, ბაგრატ V-ის ძე|გიორგი VII-ის]] მეთაურობით მამაცურად შეებრძოლნენ მტერს მდ. საგიმის პირას, ქვემო ქართლში, მაგრამ იძულებული გახდნენ უკან დაეხიათ. თემურლენგი კვალდაკვალ დაედევნა მათ, სასტიკად მოაოხრა ქვემო ქართლი, თბილისი, მუხრანის ველის მიდამოები, ქსნისა და ლეხურის ხეობები და გარს შემოერტყა [[გორის ციხე|გორის ციხეს]], სადაც გიორგი VII იყო გამაგრებული. გიორგიმ გაარღვია მტრის ალყა და გამაგრდა [[ძამის ციხე|ძამის ციხეში]], სადაც შვიდი დღე-ღამის განმავლობაში მამაცურად იგერიებდა მტრის გააფთრებულ იერიშებს. ძამის ციხის დაცემის შემდეგ საქართველოს მეფე გამაგრდა სავანეთის ციხეში. მტერმა ეს ციხეც აიღო. გიორგი VII გადავიდა დასავლეთ საქართველოში. თემურლენგმა ვერ გაბედა ტყიანსა და უგზო ქვეყანაში მეფის დადევნება და ჯავრი სამცხეზე იყარა. შემდეგ გადავიდა თრიალეთში, იქედან თეძმის ხეობით - მცხეთაში და დალაშქრეს არაგვის ხეობა, შემდეგ ააოხრა [[ტაო]]. ლაშქრობა გაგრძელდა მთელ გაზაფხულ-ზაფხულს. მტერმა მოაოხრა მთელი აღმოსავლეთ და სამხრეთ საქართველო, დალეწა ციხე-კოშკები, გაძარცვა და დაანგრია ეკლესია-მონასტრები, გაკაფა ბაღ-ვენახები, დაწვა და გაანადგურა სოფლები და დაბა-ქალაქები, გაჟლიტა უამრავი ხალხი. ამ ლაშქრობიდან თემურლენგმა 60 ათასზე მეტი ტყვე წაიყვანა.
+
+[[1401]] თემურლენგი მეშვიდედ მოადგა საქართველოს ასაოხრებლად, გიორგი VII-მ ზავი შესთავაზა. თემურლენგი დატანხმდა, რადგანაც ოსმალეთის სულთანტან გადამწყვეტი შეტაკების წინ ზავი მისთვის ხელსაყრელი იყო. 1401 შამქორის ზავის პირობით საქართველო კისრულობდა ხარკის გადახდას, თემურლენგის ლაშწრობების მიღებას, სამიმოსვლო გზების თავისუფლების დაცვას. ქართველებს ეკრძალებოდათ მუსლიმურ ქვეყნებში სახალხოდ ქრისტიანული რელიგიის რიტუალის შესრულება, ხოლო თავიანთ ქვეყანაში უნდა მოპყრობოდნენ მუსლიმანებს. სამაგიეროდ თემურლენგი საქართველოს მშვიდობას და ხელშეუხებლობას აღუთქვამდა. მიუხედავად ზავისა, თემურლენგი იმავე წელს თავს დაესხა [[თორთომი|თორთომის]] ციხეში გამაგრებულ ქართველებს და მოაოხრა იქაური მხარე.
+
+[[1403]] ივლისში, ოსმალეთის სულთან ბაიაზიდ ილდირიმის დამარცხების შემდეგ, თემურლენგი მერვედ შემოიჭრა საქართველოში, მოაოხრა სამცხე და ალყა შემოარტყა [[ბირთვისი|ბირთვისის ციხეს]], რომლის ერთი მუჭა გარნიზონი სამი კვირის განმავლობაში მამაცურად იგერიებდა მტრის იერიშებს. ციხის დაპყრობის შემდეგ თემურლენგმა გაილაშქრა დასავლეთ საქართველოზე და გიორგი VII-ის დევნაში მივიდა აფხაზეთის საზღვრამდე. ბოლოს იგი, რაკი საქართველოს მეფის წინააღმდეგობა ვერ გატეხა, იძულებული გახდა დაზავებოდა გიორგი VII-ს. ზავი იმეორებდა შამქორის ზავის პირობებს და, რაც მთავარია, ცნობდა საქართველოს, როგორც ქრისტიანულ ქვეყანას. ეს იყო ქართველი ხალხის დიდი გამარჯვება, რომელიც მოპოვებულ იქნა ადამიანთა აურაცხელი მსხვერპლისა და უზარმაზარი მატერიალური ზარალის ფასად.
 
 
-{{ესკიზი}}    
+
+ 
 
 [[კატეგორია:საქართველოს ისტორია]]
