*Empty MediaWiki Message*

--- a/ამიენის_საკათედრო_ტაძარი.mw
+++ b/ამიენის_საკათედრო_ტაძარი.mw
@@ -1,8 +1,8 @@
 [[Image:Cathedral of Amiens front.jpg|thumb|250px|ამიენის ღვთისმშობლის ტაძარი.]]
 [[Image:Cathedral of Amiens glass window.jpg|thumb|250px|ტაძრის ერთ-ერთი მოჭიქული მინის ფანჯარა.]]
-'''ამიენის ღვთისმშობლის საკათედრო ტაძარი''' (ფრანგ.: Cathédrale Notre-Dame d'Amiens) ყველაზე მაღალი კათედრალია სარანგეთში უდიდესი ინტერიერის მოცულობით (200.000 მ³). გუმბათოვანი თაღების აპექსი 42.30 მ სიმაღლისაა, რაც თავის მხრივ ყველაზე მაღალია საფრანგეთში. ეს მონუმენტური საკათედრო ტაძარი მდებარეობს [[ამიენი|ამიენში]], პიკარდის მთავარ ქალაქში, მდ. სომის ხეობაში, [[პარიზი|პარიზიდან]] 100 კმ-ში.
+'''ამიენის ღვთისმშობლის საკათედრო ტაძარი''' (ფრანგ.: Cathédrale Notre-Dame d'Amiens) ყველაზე მაღალი კათედრალია [[საფრანგეთი|საფრანგეთში]] უდიდესი ინტერიერის მოცულობით (200.000 მ³). გუმბათოვანი თაღების აპექსი 42.30 მ სიმაღლისაა, რაც თავის მხრივ ყველაზე მაღალია საფრანგეთში. ეს მონუმენტური საკათედრო ტაძარი მდებარეობს [[ამიენი|ამიენში]], პიკარდის მთავარ ქალაქში, მდ. სომის ხეობაში, [[პარიზი|პარიზიდან]] 100 კმ-ში.
 
-წერილობითი წყაროების სიმწირე ამ გოთური კათედრალის აშენების თაობაზე შესაძლოა განპირობებული იყოს ხანძრებით, რომელმაც 1218 და 1258 წლებში ტაძრის არქივები გაანადგურა და თვით კათედრალსაც დიდი ზიანი მიაყენა. 1220 წელს ეპისკოპოსი ევრარ დე ფუილმა წამოიწყო აღდგენითი სამუშაოები; რობერ დე ლუზარქი არქიტექტორი იყო 1228 წლამდე, შემდეგ კი 1258 წლამდე მასზე თომას დე კორმონი მუშაობდა. მისი ვაჟი, რენო დე კორმონი არქიტექტორის მოვალეობას ასრულებდა 1288 წლამდე. კორბის ქრონიკები კათედრალის დასრულების ვადად 1266 წელს მოიხსენიებს. მოპირკეთების სამუშაოები თუმცა გაცილებით მეტ ხანს გრძელდებოდა. ტაძრის იატაკები უამრავი სიმბოლოთია დაფარული, მათ შორის აღსანიშნავია სვასტიკები. ლაბირინთი იატაკს 1288 წელს დაემატა. კათედრალს ასევე უამრავი ბრწყინვალე სკულპტურა ამშვენებს. გადმოცემით კათედრალში უნდა იყოს [[იოანე ნათლისმცემელი|იოანე ნათლისმცემლის]] თავი, რომელიც [[კონსტანტინოპოლი|კონსტანტინოპოლიდან]] ვალონ დე სარტონს უნდა ჩამოეტანა, რომელიც მეოთხე [[ჯვაროსნული ლაშქრობები|ჯვაროსნული ლაშქრობიდან]] ბრუნდებოდა.
+წერილობითი წყაროების სიმწირე ამ [[გოთური სტილი|გოთური]] კათედრალის აშენების თაობაზე შესაძლოა განპირობებული იყოს ხანძრებით, რომელმაც 1218 და 1258 წლებში ტაძრის არქივები გაანადგურა და თვით კათედრალსაც დიდი ზიანი მიაყენა. 1220 წელს ეპისკოპოსი ევრარ დე ფუილმა წამოიწყო აღდგენითი სამუშაოები; რობერ დე ლუზარქი არქიტექტორი იყო 1228 წლამდე, შემდეგ კი 1258 წლამდე მასზე თომას დე კორმონი მუშაობდა. მისი ვაჟი, რენო დე კორმონი არქიტექტორის მოვალეობას ასრულებდა 1288 წლამდე. კორბის ქრონიკები კათედრალის დასრულების ვადად 1266 წელს მოიხსენიებს. მოპირკეთების სამუშაოები თუმცა გაცილებით მეტ ხანს გრძელდებოდა. ტაძრის იატაკები უამრავი სიმბოლოთია დაფარული, მათ შორის აღსანიშნავია სვასტიკები. ლაბირინთი იატაკს 1288 წელს დაემატა. კათედრალს ასევე უამრავი ბრწყინვალე სკულპტურა ამშვენებს. გადმოცემით კათედრალში უნდა იყოს [[იოანე ნათლისმცემელი|იოანე ნათლისმცემლის]] თავი, რომელიც [[კონსტანტინოპოლი|კონსტანტინოპოლიდან]] ვალონ დე სარტონს უნდა ჩამოეტანა, რომელიც მეოთხე [[ჯვაროსნული ლაშქრობები|ჯვაროსნული ლაშქრობიდან]] ბრუნდებოდა.
 
 ამიენის ნოტრ-დამი 1981 წლიდან [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლთა სიაშია შეტანილი.
 
