--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -3,13 +3,9 @@
 
 
 ==ბიოგრაფია==
-[[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ 
+Maradona-ს შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ 
 საუკეთესო ფეხბურთელად. 
 
-პლატინიმ თავი გამოიჩინა ტექნიკითა და ჯარიმების შესრულებით. ის იყო [[საფრანგეთის 
-ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი 
-დამსახურებით საფრანგეთი გახდა ვროპის ჩემპიონი[[1984]] წელს, და მან 5 თამაშში 
-მოახერხა 11 გოლის გატანა.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
