*Empty MediaWiki Message*

--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -3,7 +3,7 @@
 
 
 ==ბიოგრაფია==
-Maradona-ს შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ 
+მარადონას შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ 
 საუკეთესო ფეხბურთელად. 
 
 
