Reverted edit of 194.23.40.111, changed back to last version by Alsandro

--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -3,8 +3,8 @@
 
 
 ==ბიოგრაფია==
-
-
+[[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ საუკეთესო ფეხბურთელად. მისი პირველი კლუბი იყო [[ნანსი]]. ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
+[[იუვენტუსი|იუვენტუსმა]]. პლატინიმ თავი გამოიჩინა  საკუთარი ტექნიკითა და ჯარიმის შესრულებით. ის იყო [[საფრანგეთის ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი დამსახურებით საფრანგეთი ევროპის ჩემპიონი გახდა [[1984]] წელს.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
