--- a/მიშელ_პლატინი.mw
+++ b/მიშელ_პლატინი.mw
@@ -4,7 +4,7 @@
 
 ==ბიოგრაფია==
 [[მარადონა|მარადონას]] შემდეგ პლატინი ყოველთვის ითვლებოდა 80-იანი წლების ერთ-ერთ საუკეთესო ფეხბურთელად. მისი პირველი კლუბი იყო [[ნანსი]]. ნანსიში კარგი თამაშის შემდეგ შეამჩნია იტალიურმა კლუბმა
-[[იუვენტუსი|იუვენტუსმა]]. პლატინიმ თავი გამოიჩინა  საკუთარი ტექნიკითა და ჯარიმის შესრულებით. ის იყო [[საფრანგეთის ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი დამსახურებით საფრანგეთი ევროპის ჩემპიონი გახდა [[1984]] წელს.
+[[იუვენტუსი|იუვენტუსმა]]და გადაიბირა. პლატინიმ თავი გამოიჩინა  საკუთარი ტექნიკითა და ჯარიმის შესრულებით. ის იყო [[საფრანგეთის ეროვნული საფეხბურთო ნაკრები|საფრანგეთის ეროვნული ნაკრების]] კაპიტანი. მისი დამსახურებით საფრანგეთი ევროპის ჩემპიონი გახდა [[1984]] წელს, სადაც 5 თამაში გაიტანა 9 გოლი.
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფეხბურთელები]]
