*Empty MediaWiki Message*

--- a/მილანის_საკათედრო_ტაძარი.mw
+++ b/მილანის_საკათედრო_ტაძარი.mw
@@ -4,5 +4,6 @@
 {{ითარგმნება}}
 
 [[კატეგორია:იტალიის არქიტექტურული ძეგლები]]
+[[კატეგორია:გოთური არქიტექტურა]]
 [[კატეგორია:ქრისტიანული ტაძრები]]
 [[კატეგორია:მილანი]]
