*Empty MediaWiki Message*

--- a/აფრიდონი.mw
+++ b/აფრიდონი.mw
@@ -1,4 +1,4 @@
-'''აფრიდონი''', XII საუკუნის II ნახევრის [[საქართველო|საქართველოს]] პოლიტიკური მოღვაწე. [[გიორგი III, საქართველოს მეფე|გიორგი III-სა]] და [[თამარი|თამარ მეფის]] მსახურთუხუცესი. წარმომავლობით "უგვარო" - აზნაურის ყმა (ვასალი). დაწინაურდა გიორგი III-ის მეფობის დროს, როდესაც ცენტრალური ხელისუფლება ატარებდა დიდგვაროვან ფეოდალთა შეზღუდვის პოლიტიკას. აფრიდონს სახელოდ (საგამგებლოდ) გადაეცა ქვაბულისძეთა ყოფილი მამული, სამეფო დომენად ქცეული თმოგვის ციხე-ქალაქი და მისი მიმდგომი ქვეყანა, აგრეთვე [[კლდეკარის საერისთავო|კლდეკარის]] ერისთავებისათვის [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მიერ ჩამორთმეული და სამეფო დომენად ქცეული [[თრიალეთი (მხარე)|თრიალეთი]]. გიორგი III-ის გარდაცვალებისა და თამარის მეფობის პირველსავე წელს დიდგვარიანებმა შეუტიეს ცენტრალურ ხელისუფლებას, მოითხოვეს აღზევებულ "უგვარო" ფეოდალთა გადაყება. ცენტრალურმა ხელისუფლებამ  უკან დაიხია. აფრიდონს ჩამოერთვა [[მსახურთუხუცესი|მსახურთუხუცესობა]] და საგამგებლო ქვეყნები.
+'''აფრიდონი''', XII საუკუნის II ნახევრის [[საქართველო|საქართველოს]] პოლიტიკური მოღვაწე. [[გიორგი III, საქართველოს მეფე|გიორგი III-სა]] და [[თამარი|თამარ მეფის]] მსახურთუხუცესი. წარმომავლობით "უგვარო" - აზნაურის ყმა (ვასალი). დაწინაურდა გიორგი III-ის მეფობის დროს, როდესაც ცენტრალური ხელისუფლება ატარებდა დიდგვაროვან ფეოდალთა შეზღუდვის პოლიტიკას. აფრიდონს სახელოდ (საგამგებლოდ) გადაეცა ქვაბულისძეთა ყოფილი მამული, სამეფო დომენად ქცეული [[თმოგვის ციხე|თმოგვის ციხე-ქალაქი]] და მისი მიმდგომი ქვეყანა, აგრეთვე [[კლდეკარის საერისთავო|კლდეკარის]] ერისთავებისათვის [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მიერ ჩამორთმეული და სამეფო დომენად ქცეული [[თრიალეთი (მხარე)|თრიალეთი]]. გიორგი III-ის გარდაცვალებისა და თამარის მეფობის პირველსავე წელს დიდგვარიანებმა შეუტიეს ცენტრალურ ხელისუფლებას, მოითხოვეს აღზევებულ "უგვარო" ფეოდალთა გადაყება. ცენტრალურმა ხელისუფლებამ  უკან დაიხია. აფრიდონს ჩამოერთვა [[მსახურთუხუცესი|მსახურთუხუცესობა]] და საგამგებლო ქვეყნები.
 
 
 [[კატეგორია:ქართველები]]
