--- a/მილანის_საკათედრო_ტაძარი.mw
+++ b/მილანის_საკათედრო_ტაძარი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Milano Duomo 1.jpg|thumb|300px|დომო დი მილანო მთავარი მოედნიდან]]
-'''მილანის საკათედრო ტაძარი''' (იტ.: Duomo di Milano) ერთ-ერთი ყველაზე სახელგამთქმული შენობაა [[ევროპა|ევროპაში]]. ეს ვრცელი [[გოთიკა|გოთური]] სტილის ტაძარია [[მილანი|მილანის]] ცენტრის მთავარ მოედანზე. მილანის დომო სიდიდით მეორე რომაული კათოლიკური ტაძარია და მხოლოდ [[სევილიის საკათედრო ტაძარი|სევილიის კათედრალს]] ჩარმორჩება ამ მხრივ (წმ. პეტრეს ბაზილიკა რომში ასევე უფრო დიდია, თუმცა ის კათედრალი არ არის). დომო 157 მეტრი სიგრძისაა და მასში 40.000 ადამიანი თავისუფლად მოთავსდება. ქორალის დიდი ფანჯრები ერთ დროს მსოფლიოში უდიდესად ითვლებოდა.
+'''მილანის საკათედრო ტაძარი''' (''[[იტალიური ენა|იტალ.]]'': Duomo di Milano) ერთ-ერთი ყველაზე სახელგამთქმული შენობაა [[ევროპა|ევროპაში]]. ეს ვრცელი [[გოთიკა|გოთური]] სტილის ტაძარია [[მილანი|მილანის]] ცენტრის მთავარ მოედანზე. მილანის დომო სიდიდით მეორე რომაული კათოლიკური ტაძარია და მხოლოდ [[სევილიის საკათედრო ტაძარი|სევილიის კათედრალს]] ჩარმორჩება ამ მხრივ (წმ. პეტრეს ბაზილიკა რომში ასევე უფრო დიდია, თუმცა ის კათედრალი არ არის). დომო 157 მეტრი სიგრძისაა და მასში 40.000 ადამიანი თავისუფლად მოთავსდება. ქორალის დიდი ფანჯრები ერთ დროს მსოფლიოში უდიდესად ითვლებოდა.
 
 {{ითარგმნება}}
 
@@ -7,3 +7,13 @@
 [[კატეგორია:გოთური არქიტექტურა]]
 [[კატეგორია:ქრისტიანული ტაძრები]]
 [[კატეგორია:მილანი]]
+
+[[de:Mailänder Dom]]
+[[en:Duomo di Milano]]
+[[et:Milano toomkirik]]
+[[fi:Duomo di Milano]]
+[[fr:Dôme de Milan]]
+[[it:Duomo di Milano]]
+[[ja:ミラノのドゥオーモ]]
+[[nl:Dom van Milaan]]
+[[zh:米兰主教教堂]]
