--- a/ჯონ_ჰენკოკის_ცენტრი.mw
+++ b/ჯონ_ჰენკოკის_ცენტრი.mw
@@ -1,6 +1,28 @@
 [[სურათი:P9080114.JPG|thumb|250px|ჯონ ჰენკონის ცენტრი მიჩიგანის ავენიუდან.]]
+[[სურათი:chicago night view from hancock.JPG|thumb|250px|ღამის ჩიკაგოს ხედი ჰენკონის ცენტრიდან ჩრდილოეთით.]]
 '''ჯონ ჰენკოკის ცენტრი''' (John Hancock Center) მდებარეობს მიჩიგანის ავენიუს 875-ზე, [[ჩიკაგო|ჩიკაგოში]], [[ილინოისი]], და არის 100-სართულიანი 344 მ სიმაღლის ცათამბჯენი, რომლის პროექტი ეკუთვნის სტრუქტურულ ინჟინერს [[ფაზლურ ხანი|ფაზლურ ხანს]] კომპანიიდან ''სკიდმორ, ოუინგს ენდ მერილ''. დასრულების ჟამს [[1969]] წელს ის იყო მსოფლიოში ყველაზე მაღალი შენობა [[ნიუ-იორკი|ნიუ-იორკის]] გარეთ. ამჟამად ჰენკოკის ცენტრი სიმაღლით ჩიკაგოში მესამე და [[აშშ]]-ში მეოთხე ცათამბჯენია, [[სიარს ტაუერი|სიარს ტაუერის]], ეონ ცენტრისა და [[ემპაია სტეიტ ბილდინგი|ემპაია სტეიტ ბილდინგის]] შემდეგ. შენობაში განლაგებულია ოფისები და რესტორნები, ასევე 700-მდე საცხოვრებელი ბინა, რომლებიც თავის მხრივ მსოფლიოში ყველაზე მაღალ სახცოვრებელ ბინებად ითვლება.
+
 
 95-ე სართულზე განლაგებულია რესტორანი, რომელსაც ამჟამად "The Signature Room on the 95th Floor" ჰქვია. რესტორნიდან ჩიკაგოსა და [[მიჩიგანის ტბა|მიჩიგანის ტბის]] თვალწარმტაცი ხედი იშლება. თუმცა ქალაქის საუკეთესო ხედი რესტორნის ქალთა საპირფარეშოდან სჩანს. და ამის გამო ხშირად აქ მამაკაცებსაც მოჰკრავთ თვალს. ჰენკოკის ცენტრის ობსევატორია კონკურენციას უწევს სიარს ტაუერის სკაიდეკს, რომელიც ქალაქის ცენტრის მეორე ბოლოში მდებარეობს. ჰენკოკის ცენტრი კომერციულ უბანში მდებარეობს, მაშინ როცა სიარს ტაუერი ფინანსურ უბანშია. 94-ე სართულზე განლაგებული ობსერვატორია შლის ჩიკაგოს ხედს ოთხივე მხარეს. სპეციალურად გამოყოფილ ბადით შემოვლებულ ადგილას მსურველებს შეუძლიათ გამოსცადონ ზედაპირიდან 305 მეტრზე არსებული ქარების ძალა. 44-ე სართულზე ე.წ. სკაილობია, სადაც ამერიკის ყველაზე მაღალი შიგა საცურაო აუზია. 96-ე სართულზე კოქტეილ ბარია, საიდანაც კოქტეილთან ერთად მზის ჩასვლის პროცესში ჩიკაგოს ხედის ტრანსფორმაციას შეიძლება დააკვირდეთ, თუმცა აქ მოხვედრამდე შესაძლოა ლიფტთან საკმაო ხანს ლოდინმა მოგიწიოთ.
 
-მუშავდება...
+ცათამბჯენის გამორჩეული X-ფორმის ჯვარედინი ლითონის კარკასის ექსტერიერი ფაქტიურად მინიშნებაა იმაზე, რომ სტრუქტურის ”კანი” სინამდვილეში მისი ტუბულარული სისტემის ნაწილია. ეს იდეა შენობის პროგრესული ჩანაფიქრის კონცეფციის ნაწილია, რითაც შესაძლებელი გახდა რეკორდული სიმაღლის მიღწევა (ტუბულარული სისტემა შენობის ჩონჩხია, რომელიც მას ეხმარება ქარებისა და მიწისძვრების დროს მყარად დგომაში). ეს საევე საშუალებას იძლევა შონიბის შიგა ფართი საყოფაცხვორებო მიზნებისთვის გამოთავისუფლდეს არქიტექტორის ნებასურვილის შესაბამისად. სხვა მრავალ ნიშანთვისებასთან ერთად ამგვარი ექსტერიერის ფორმამ ჯონ ჰენკოკის ცენტრს არქიტექტურული შედევრის რეპუტაცია მიანიჭა.
+
+შენობის ინტერიერი 1995 წელს განახლდა; ლობი მარმარილოთი  და დამუშავებული კირქვის ფილებით მოპირკეთდა. ელიფსის მსგავსი პლაზა შენობის წინ საზოგადოებრივ ოაზისს წარმოადგენს მრავალი სეზონური ნარგავებითა და 4 მეტრი სიმაღლის ჩანჩქერით.
+
+შენობა უდიდესი კოშკების მსოფლიო ფედერაციის წევრია. მას ასევე უამრავი ჯილდო აქვს მიღებული მისი განსაკუთრებული სტილის გამო. 2002 წლის 9 მარტს 100 კმ/სთ სიჩქარის ქარმა 43-ე სართულიდან მოგლიჯა შენობის ფესადის ფილა, რომელმაც რამდენიმე მანქანა დაამტვრია და სამი ადამიანი იმსხვერპლა.
+
+ყოველწლიური კიბის ამსვლელი შეჯიბრი 94-ე სართულამდე მიჩიგანის ავენიუს დონიდან ობსერვატორიის პლატფორმამდე სახელწოდებით ”დაჯაბნე ჰენკოკი” (Hustle up the Hancock) ტარდება თებერვლის ბოლო კვირას. სარეკორდო დრო დაფიქსირდა 2006 წელს - 9 წუთი და 39 წამი.
+
+==იხ. აგრეთვე==
+*[[მსოფლიოს უმაღლესი შენობები]]
+*[[მსოფლიოს უმაღლესი სტრუქტურები]]
+*[[ცათამბჯენთა სია]]
+
+[[კატეგორია:მსოფლიოს უმაღლესი შენობები]]
+[[კატეგორია:ჩიკაგო]]
+
+
+[[de:John Hancock Center]]
+[[en:John Hancock Center]]
+[[es:John Hancock Center]]
+[[pt:John Hancock Center]]
