*Empty MediaWiki Message*

--- a/ზაალ_კახიანი.mw
+++ b/ზაალ_კახიანი.mw
@@ -1,11 +1,10 @@
-[[სურათი:kakhiani1.jpg|thumb]] 
-კახიანი ზაალ ნიკოლოზის ძე [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
+[[სურათი:kakhiani1.jpg|thumb|ზაალ კახიანი]] 
+'''ზაალ ნიკოლოზის ძე კახიანი''' (* [[5 ივლისი]], [[1927]], [[თბილისი]] ),  ქართველი ქირურგი, [[მედიცინის მეცნიერებათა დოქტორი]] (1967), [[პროფესორი]] (1967), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე (1980), სკკპ წევრი 1956.
 
+==ბიოგრაფია==
 აკადემიის რექტორი – [[1989]]–[[1992]] წლებში.
 
-დაიბადა [[1927]] წლის [[5 ივლისს]] ბაღდადის რაიონის სოფ. როკითში
-
-[[1951]] წელს დაამთავრა ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის [[სამკურნალო ფაკულტეტი]].
+[[1951]] წელს დაამთავრა ქ. თბილისის სახელმწიფო სამედიცინო ინსტიტუტის [[სამკურნალო ფაკულტეტი]].
 
 [[1954]] წელს დაამთავრა ასპირანტურა საქართველოს მეცნიერებათა აკადემიის ექსპერიმენტული და კლინიკური ქირურგიის ინსტიტუტის ბაზაზე. იმავე წელს დაიწყო მუშაობა თბილისის ექიმთა დახელოვნების ინსტიტუტში სამეცნიერო საბჭოს მდივნად, შემდგომ კი ქირურგიული ფაკულტეტის დეკანად.
 
@@ -27,9 +26,14 @@
 
 [[1997]] წელს სომხეთის ქირურგიულმა საზოგადოებამ აირჩია საპატიო ქირურგად და მიანიჭა ა.მიქაელიანის სახ. ქირურგიის ინსტიტუტის ოქროს მედალი. ასევე ევროპისა და ისრაელის იმპლანტაციის აკადემიის წევრი, ამერიკის კრიოქირურგიის და ამერიკა–საქართველოს მედიცინის აკადემიის წევრი, იტალიისა და ლუიზიანას შტატის პლასტიკური ქირურგიის აკადემიის წევრი, სომხეთის ქირურგიის აკადემიის წევრი, ბაზელის ქირურგთა ინტერნაციონალური და საქართველოს პარენტერალური და ენტერალური კვების საზოგადოების წევრი.
 
-დაჯილდოვებულია “ნ.პიროგოვის სახელობის” მედლით, ჰუმანური მოღვაწეობისთვის. პოლონეთის ისტორიის
-მეცნიერების მე-11 კონგრესის საპატიო მედლით და ნ.კოპერნიკის სამკერდო ნიშნით; აკად. კ.ერისთავის
+დაჯილდოვებულია “ნ. პიროგოვის სახელობის” მედლით, ჰუმანური მოღვაწეობისთვის. პოლონეთის ისტორიის
+მეცნიერების მე-11 კონგრესის საპატიო მედლით და ნ. კოპერნიკის სამკერდო ნიშნით; აკად. კ. ერისთავის
 სახ. ექსპერიმენტული და კლინიკური ქირურგიის ინსტიტუტის ოქროს მედლით; საქართველოს სტომატოლოგთა
-და ყბა-სახის ქირურგთა ასოციაციის მიერ ა.ედიბერიძის სახ. მედლით.
+და ყბა-სახის ქირურგთა ასოციაციის მიერ ა. ედიბერიძის სახელობის მედლით.
 
 [[1998]] წელს მიენიჭა [[ღირსების ორდენი]].
+
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია:დაბადებული  1927]]
