--- a/5_ივლისი.mw
+++ b/5_ივლისი.mw
@@ -9,7 +9,7 @@
 *[[1853]] : [[როდსი, სესილ]] - ინგლისელი პოლიტიკური მოღვაწე (გ.[[1902]])
 *[[1889]] : [[კოკტო, ჟან]] - ფრანგი მწერალი (გ.[[1963]])
 *[[1911]] : [[პომპიდუ, ჟორჟ]] - [[საფრანგეთი|საფრანგეთის]] პრეზიდენტი [[1969]]-[[1974]] (გ.[[1974]])
-
+*[[ 1927]] : [[კახიანი, ზაალ]] -  ქართველი ქირურგი
 == ამ დღეს გარდაცვლილნი ==
 *[[1968]] : [[რამკე, ჰერმან-ბერნჰარდ]] - გერმანელი სამხედრო მოღვაწე.
 *[[1969]] : [[ბაკჰაუსი, ვილჰელმ]] - გერმანელი პიანისტი (დ.[[1884]])
