*Empty MediaWiki Message*

--- a/გიორგი_ხუნდაძე.mw
+++ b/გიორგი_ხუნდაძე.mw
@@ -1,20 +1,25 @@
-[[სურათი:khundadze1.jpg|thumb|ხუნდაძე გიორგი]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
+[[სურათი:khundadze1.jpg|thumb|გიორგი ხუნდაძე]] 
+'''გიორგი რომანის ძე ხუნდაძე''', ([[12 ოქტომბერი]]/[[25 ოქტომბერი]], [[1906]], [[თბილისი]] ―   †  [[16 მარტი]], [[1985]], იქვე), ქართველი ქირურგი, [[მედიცინის მეცნიერებათა დოქტორი]] ([[1953]]), [[პროფესორი]] (1955), საქართველოს დამსახურებული მოღვაწე (1961), სკკპ წევრი 1951.
 
+==ბიოგრაფია==
 აკადემიის რექტორი – [[1954]]–[[1979]] წლებში.
 
-[[1940]]-[[1941]] წლებში მუშაობდა ქ.[[ლენინგრადი]]ს # 1 სახელმწიფო ინსტიტუტის ჰოსპიტალური ქირურგიის კლინიკაში, ასისტენტად.
+
+[[1929]] დაამთავრა თბილისის სახელმწიფო უნივერსიტეტის  სამკურნალო ფაკულტეტი. [[1933]]-[[1941]] მუშაობდა ლენინგრადში [[ჯანელიძე, იუსტინე|ი. ჯანელიძესთან]] და [[შევკუნენკო, ვიქტორ|ვ. შევკუნენკოსთან]] ერთად.
+
+[[1940]]-[[1941]] წლებში მუშაობდა [[ლენინგრადი|ქ. ლენინგრადის]] # 1 სახელმწიფო ინსტიტუტის ჰოსპიტალური ქირურგიის კლინიკაში, ასისტენტად.
 
 [[1941]]-[[1946]] წლებში მუშაობდა # 2309 საევაკუაციო-ჰოსპიტალის წამყვან ქირურგად.
 
 [[1946]]-[[1950]] წლებში მუშაობდა ასისტენტად ჰოსპიტალური ქირურგიული კლინიკის რუსეთის ჯანდაცვის სკლიფასოვსკის სახ ინსტიტუტის ბაზაზე.
 
-[[1950]]-[[1952]] წლებში მუშაობდა ქ.მოსკოვის სკლიფასოვსკის სახ. # 1 სამედიცინო ინსტიტუტის ქირურგიული კლინიკის ასისტენტად.
+[[1950]]-[[1952]] წლებში მუშაობდა ქ. მოსკოვის სკლიფასოვსკის სახ. # 1 სამედიცინო ინსტიტუტის ქირურგიული კლინიკის ასისტენტად.
 
-[[1952]]-[[1954]] წლებში მუშაობდა ქ.მოსკოვის # 1 სამედიცინო ინსტიტუტის დოცენტის მოვალეობის შემსრულებლად და სკლიფასოვსკის სახ. ინსტიტუტის ექსპერიმენტალურ-ქირურგიული განყოფილების მოადგილედ.
+[[1952]]-[[1954]] წლებში მუშაობდა [[მოსკოვი|ქ. მოსკოვის]] # 1 სამედიცინო ინსტიტუტის დოცენტის მოვალეობის შემსრულებლად და სკლიფასოვსკის სახ. ინსტიტუტის ექსპერიმენტალურ-ქირურგიული განყოფილების მოადგილედ.
 
 [[1937]] წელს გახდა [[მედიცინის მეცნიერებათა კანდიდატი]], ხოლო [[1953]] წელს [[მედიცინის მეცნიერებათა დოქტორი]].
 
-[[1954]] წლიდან არჩეულ იქნა ქ.თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად და ასევე ქირურგიის კათედრის გამგედ.
+[[1954]] წლიდან არჩეულ იქნა ქ. თბილისის ექიმთა დახელოვნების ინსტიტუტის რექტორად და ასევე ქირურგიის კათედრის გამგედ.
 
 [[1955]] წელს მიენიჭა პროფესორის წოდება.
 
@@ -22,4 +27,10 @@
 
 შესრულებული აქვს 95 [[სამეცნიერო ნაშრომი]], აქედან რამოდენიმე მონოგრაფია.
 
-დაჯილდოვებულია: [[1940]]წ. “[[დამსახურებული შრომის]]” და [[1945]]წ. “გერმანიაზე გამარჯვების” მედლებით, ასევე [[1945]]წ. “[[წითელი ვარსკვლავის]]”, 1966წ. “[[ლენინის]]” და [[1970]]წ. “[[ოქტომბრის რევოლუციის]]” [[ორდენები]]თ.
+იყო საქართველოს სსრ VI და VII მოწვევების უმაღლესი საბჭოს დეპუტატი.
+დაჯილდოვებულია [[1940]] წელს “[[დამსახურებული შრომის]]” და [[1945]] წელს “გერმანიაზე გამარჯვების” მედლებით, ასევე [[1945]] “[[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]]”, 1966  “[[ლენინის ორდენი|ლენინის]]” და [[1970]]  “[[ოქტომბრის რევოლუციის ორდენი|ოქტომბრის რევოლუციის]]” ორდენებით.
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი ქირურგები]]
+[[კატეგორია:დაბადებული  1906]]
+[[კატეგორია:გარდაცვლილი 1985]]
