--- a/16_მარტი.mw
+++ b/16_მარტი.mw
@@ -27,6 +27,7 @@
 
 *[[1940]] : [[ლაგერლეფი, სელმა]] - შვედი მწერალი.
 * [[1982]] : [[ბათიაშვილი, ირაკლი]] - ქართველი ენტომოლოგი.
+*[[1985]] : [[ხუნდაძე, გიორგი]] - ქართველი ქირურგი
 ==დღესასწაულები==
 
 *((X)): ეროვნული დღესასწაული.
