*Empty MediaWiki Message*

--- a/გიორგი_მენაბდე.mw
+++ b/გიორგი_მენაბდე.mw
@@ -1,10 +1,10 @@
 [[სურათი:rector.jpg|thumb|გიორგი მენაბდე]]
-'''გიორგი მენაბდე''' ამჟამად [[თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი|თბილისის სახელმწიფო სამედიცინო უნივერსიტეტის]] რექტორის მოვალეობის შემსრულებელი მედიცინის მეცნიერებათა დოქტორი, პროფესორი, საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი, აშშ-ს ფლორიდის შტატის იმპლანტოლოგიის აკადემიის წევრი, მსოფლიო სტომატოლოგთა ასოციაციის გამგეობის წევრი
+'''გიორგი მენაბდე'''  (* [[24 სექტემბერი]], [[1957]], [[თბილისი]]), [[თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი|თბილისის სახელმწიფო სამედიცინო უნივერსიტეტის]] რექტორის მოვალეობის შემსრულებელი მედიცინის მეცნიერებათა დოქტორი, პროფესორი, საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი, აშშ-ს ფლორიდის შტატის იმპლანტოლოგიის აკადემიის წევრი, მსოფლიო სტომატოლოგთა ასოციაციის გამგეობის წევრი
 
 ==ბიოგრაფია== 
-გიორგი მენაბდე დაიბადა [[1957]] წლის [[24 სექტემბერი|24 სექტემბერს]], ქ. [[თბილისი|თბილისში]]. 1980 წ. დაამთავრა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სტომატოლოგიური ფაკულტეტი. 1986 წელს დაიცვა საკანდიდატო დისერტაცია თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ყბა - სახის ქირურგიის კათედრაზე. 1986-1992 წ. [[მოსკოვი|მოსკოვის]] თავისა და კისრის აღდგენითი ქირურგიის და მიკროქირურგიის ცენტრის დოქტორანტი იყო.
+[[1980]]  დაამთავრა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სტომატოლოგიური ფაკულტეტი. 1986 წელს დაიცვა საკანდიდატო დისერტაცია თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ყბა - სახის ქირურგიის კათედრაზე. 1986-1992 წ. [[მოსკოვი|მოსკოვის]] თავისა და კისრის აღდგენითი ქირურგიის და მიკროქირურგიის ცენტრის დოქტორანტი იყო.
 
-კვალიფიკაცია ქ . მოსკოვის ქირურგიის ინსტიტუტში გაიარა მიკროქირურგიის კურსით. 1992 წელს მოსკოვში მიენიჭა მეცნიერებათა დოქტორის ხარისხი. 2001 წ. – მიენიჭა პროფესორის წოდება.
+კვალიფიკაცია ქ. მოსკოვის ქირურგიის ინსტიტუტში გაიარა მიკროქირურგიის კურსით. 1992 წელს მოსკოვში მიენიჭა მეცნიერებათა დოქტორის ხარისხი. [[2001]] – მიენიჭა პროფესორის წოდება.
 
 ==პროფესიული გამოცდილება==
 
@@ -29,4 +29,5 @@
 პროფ. გიორგი მენაბდე 4 საავტორო უფლებისა და 50 სამეცნიერო ნაშრომის ავტორია.
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ქართველი ქირურგები]]
+[[კატეგორია:ქართველი სამედიცინო მოღვაწეები]]
+[[კატეგორია:დაბადებული 1957]]
