*Empty MediaWiki Message*

--- a/გიორგი_ხუნდაძე.mw
+++ b/გიორგი_ხუნდაძე.mw
@@ -31,6 +31,6 @@
 დაჯილდოვებულია [[1940]] წელს “[[დამსახურებული შრომის]]” და [[1945]] წელს “გერმანიაზე გამარჯვების” მედლებით, ასევე [[1945]] “[[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]]”, 1966  “[[ლენინის ორდენი|ლენინის]]” და [[1970]]  “[[ოქტომბრის რევოლუციის ორდენი|ოქტომბრის რევოლუციის]]” ორდენებით.
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ქართველი ქირურგები]]
+[[კატეგორიები: ქართველი სამედიცინო მოღვაწეები]] 
 [[კატეგორია:დაბადებული  1906]]
 [[კატეგორია:გარდაცვლილი 1985]]
