*Empty MediaWiki Message*

--- a/ზაალ_კახიანი.mw
+++ b/ზაალ_კახიანი.mw
@@ -35,5 +35,5 @@
 
 
 [[კატეგორია:ქართველები]]
-[[კატეგორიები: ქართველი სამედიცინო მოღვაწეები]] 
+[[კატეგორია: ქართველი სამედიცინო მოღვაწეები]] 
 [[კატეგორია:დაბადებული  1927]]
