*Empty MediaWiki Message*

--- a/დავით_იოსელიანი.mw
+++ b/დავით_იოსელიანი.mw
@@ -15,5 +15,6 @@
 
 [[კატეგორია:ქართველი მეცნიერები]]
 [[კატეგორია:ქართველები]] 
+[[კატეგორიები: ქართველი სამედიცინო მოღვაწეები]] 
 [[კატეგორია:დაბადებული 1894]]  
 [[კატეგორია:გარდაცვლილი 1968]]
