--- a/25_თებერვალი.mw
+++ b/25_თებერვალი.mw
@@ -14,7 +14,7 @@
 *[[1953]] : [[ასნარი, ხოსე მარია]] – ესპანეთის პრემიერ–მინისტრი.
 
 ==ამ დღეს გარდაცვლილნი==
-
+* [[1968]] : [[იოსელიანი, დავით]] -  ქართველი ქირურგი
 *[[1983]] : [[უილიამსი, ტენესი]] – ამერიკელი დრამატურგი.
 
 ==დღესასწაულები==
