*Empty MediaWiki Message*

--- a/ალექსანდრე_წულუკიძე_(ექიმი).mw
+++ b/ალექსანდრე_წულუკიძე_(ექიმი).mw
@@ -31,5 +31,6 @@
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია: ქართველი სამედიცინო მოღვაწეები]] 
 [[კატეგორია:დაბადებული  1888]]
 [[კატეგორია:გარდაცვლილი 1967]]
