--- a/22_იანვარი.mw
+++ b/22_იანვარი.mw
@@ -8,6 +8,7 @@
 *[[1729]] : [[ლესინგი, გოტჰოლდ ეფრაიმ]] - გერმანელი მწერალი და განმანათლებელი.
 *[[1775]] : [[ამპერი, ანდრე მარი]] - ფრანფი ფიზიკოსი.
 *[[1788]] : [[ბაირონი,  ჯორჯ  გორდონ]] -  ინგლისელი პოეტი, რომანტიკოსი.
+* [[1888]] : [[წულუკიძე, ალექსანდრე პეტრეს ძე]] -  ქართველი ქირურგი-უროლოგი
 *[[1904]] : [[ბალანჩინი, ჯორჯ]] -  ქართული წარმოშობის ამერიკელი ბალეტმაისტერი.
 
 ==ამ დღეს გარდაცვლილნი==
