*Empty MediaWiki Message*

--- a/21_იანვარი.mw
+++ b/21_იანვარი.mw
@@ -24,6 +24,7 @@
 *[[1924]] : [[ლენინი]] - რუსი რევოლუციონერი და პოლიტიკური მოღვაწე.
 *[[1950]] : [[ორუელი, ჯორჯ]] - ინგლისელი მწერალი.
 *[[1952]] : [[მიამოტო იურიკო]] - იაპონელი მწერალი ქალი.
+* [[1967]] :[[ წულუკიძე, ალექსანდრე პეტრეს ძე]] - ქართველი ქირურგი-უროლოგი
 ==დღესასწაულები==
 
 
