*Empty MediaWiki Message*

--- a/დავით_მამამთავრიშვილი.mw
+++ b/დავით_მამამთავრიშვილი.mw
@@ -1,8 +1,12 @@
-[[სურათი:mamamtavrishvili1.jpg|thumb|მამათავრიშვილი ალექსანდრე]] [[მედიცინის მეცნიერებათა დოქტორი]], [[პროფესორი]].
+[[სურათი:mamamtavrishvili1.jpg|thumb|მამათავრიშვილი ალექსანდრე]] 
+'''დავით გრიგოლის ძე მამამთავრიშვილი''' ([[7 მაისი]]/[[30 მაისი]], [[1905]], [[თბილისი]] ―   †  [[9 ივნისი]], [[1980]], იქვე), [[ქართველები|ქართველი]] ქირურგი, [[მედიცინის მეცნიერებათა დოქტორი]] (1941), [[პროფესორი]] (1945), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე (1955), სკკპ წევრი (1955)
+
+
+==ბიოგრაფია==
 
 აკადემიის რექტორი – [[1953]]–[[1954]] წლებში.
 
-დაიბადა [[1907]] წელს ქ.თბილისში.
+
 
 [[1929]] წელს დაამთავრა ქ.თბილისის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი და მუშაობა დაიწყო ასისტენტად პათოლოგიური ანატომიის კათედრაზე.
 
@@ -20,10 +24,16 @@
 
 [[1954]]-[[1959]] წლებში იყო საქართველოს სსრ ჯანდაცვის მინისტრი.
 
-შესრულებული აქვს 240 [[სამეცნიერო ნაშრომი]], მათგან 20 [[მონოგრაფია]].
+შესრულებული აქვს 240 [[სამეცნიერო ნაშრომი]], მათგან 20 [[მონოგრაფია]]. მამამთავრიშვილის ძირითადი შრომები ეძღვნება ჯანდაცვის ორგანიზაციის, სისლძარღვთა, სანაღვლე გზების, ნაწლავების, ჩიყვისა და მწვავე მუცლის ქირურგიული მკურნალობა, კიჭნაწლავისა და ძვლების სიმსივნეების, ანესთეზიოლოგიისა და წირირგიული ენდოკრინოლოგიის საკითხებს.
 
-დაჯილდოვებულია ოქტომბრის რევოლუციის, წითელი ვარსკვლავის და საპატიო ნიშნის ორდენებით და აგრეთვე სხვა მედლებით.
+დაჯილდოვებულია [[ოქტომბრის რევოლუციის ორდენი|,ოქტომბრის რევოლუციის]], [[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]] და [[საპატიო ნიშნის ორდენი|საპატიო ნიშნის ორდენებით]] და აგრეთვე სხვა მედლებით.
 
 იყო ქირურგთა საერთაშორისო ასოციაციის ნამდვილი წევრი, საქართველოს ქირურგთა რესპუბლიკური
 საზოგადოების თავმჯდომარის მოადგილე. თბილისის ქირურგთა სამეცნიერო საზოგადოების თავმჯდომარე.
 რესპუბლიკის ჯანდაცვის სამინისტროს სამეცნიერო საბჭოს პრეზიდიუმის წევრი.
+
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია: ქართველი სამედიცინო მოღვაწეები]] 
+[[კატეგორია:დაბადებული  1905]]
+[[კატეგორია:გარდაცვლილი 1980]]
