--- a/30_მაისი.mw
+++ b/30_მაისი.mw
@@ -11,6 +11,7 @@
 
 *[[1265]] : [[ალიგიერი,  დანტე]] - იტალიელი პოეტი და ფილოსოფოსი. 
 *[[1814]] : [[ბაკუნინი, მიხაილ]] - რუსი ანარქისტი.
+*[[1905]] :[[მამამთავრიშვილი, დავით]] -  ქართველი ქირურგი
 *[[1909]] : [[გუდმენი, ბენი]] - ამერიკელი ჯაზის მუსიკოსი და დირიჟორი.
 *[[1912]] : [[ჟღენტი, სერგი]] – ქართველი ენათმეცნიერი (გ.[[1963]])
 *[[1914]] : [[ბერიძე, ვახტანგ]] - ქართველი ხელოვნების ისტორიკოსი.
