--- a/9_ივნისი.mw
+++ b/9_ივნისი.mw
@@ -18,6 +18,7 @@
 *[[1774]] : [[ათანასე თბილელი]] -  ქართველი საეკლესიო და პოლიტიკური მოღვაწე
 *[[1870]] : [[დიკენსი, ჩარლზ]] – ინგლისელი მწერალი (დ.[[1812]])
 *[[1974]]: [[ასტურიასი, მიგელ]] - გვატემალელი მწერალი
+*[[1980]] : [[მამამთავრიშვილი, დავით]] -  ქართველი ქირურგი
 
 == დღესასწაულები ==
 *[[აშშ]] : ერთა ერთიანობის დღე
