*Empty MediaWiki Message*

--- a/დავით_მამამთავრიშვილი.mw
+++ b/დავით_მამამთავრიშვილი.mw
@@ -8,15 +8,15 @@
 
 
 
-[[1929]] წელს დაამთავრა ქ.თბილისის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი და მუშაობა დაიწყო ასისტენტად პათოლოგიური ანატომიის კათედრაზე.
+[[1929]] წელს დაამთავრა ქ. თბილისის სახელმწიფო უნივერსიტეტის სამედიცინო ფაკულტეტი და მუშაობა დაიწყო ასისტენტად პათოლოგიური ანატომიის კათედრაზე.
 
-[[1932]] წლიდან მუშაობდა აკადემიკოს გრ.მუხაძის კლინიკაში.
+[[1932]] წლიდან მუშაობდა აკადემიკოს გრ. მუხაძის კლინიკაში.
 
 [[1941]] წელს დაიცვა სადოქტორო დისერტაცია და არჩეულ იქნა თბილისის სამედიცინო ინსტიტუტის ქირურგიის კათედრის პროფესორად.
 
 [[1941]]-[[1945]] წლებში მუშაობდა ამიერკავკასიის ფრონტის მთავარ ქირურგად, ხოლო ომის დამთავრების შემდეგ [[1950]] წლამდე მუშაობდა ამიერკავკასიის სამხედრო ოლქის მთავარ ქირურგად.
 
-[[1950]] წელს დაინიშნა ქ.თბილისის სახელმწიფო სამედიცინო ინსტიტუტის პრორექტორად.
+[[1950]] წელს დაინიშნა ქ. თბილისის სახელმწიფო სამედიცინო ინსტიტუტის პრორექტორად.
 
 [[1951]] წლიდან ხელმძღვანელობდა თბილისის ექიმთა დახელოვნების ინსტიტუტის ქირურგიის კათედრას.
 
@@ -26,7 +26,7 @@
 
 შესრულებული აქვს 240 [[სამეცნიერო ნაშრომი]], მათგან 20 [[მონოგრაფია]]. მამამთავრიშვილის ძირითადი შრომები ეძღვნება ჯანდაცვის ორგანიზაციის, სისლძარღვთა, სანაღვლე გზების, ნაწლავების, ჩიყვისა და მწვავე მუცლის ქირურგიული მკურნალობა, კიჭნაწლავისა და ძვლების სიმსივნეების, ანესთეზიოლოგიისა და წირირგიული ენდოკრინოლოგიის საკითხებს.
 
-დაჯილდოვებულია [[ოქტომბრის რევოლუციის ორდენი|,ოქტომბრის რევოლუციის]], [[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]] და [[საპატიო ნიშნის ორდენი|საპატიო ნიშნის ორდენებით]] და აგრეთვე სხვა მედლებით.
+დაჯილდოვებულია [[ოქტომბრის რევოლუციის ორდენი|,ოქტომბრის რევოლუციის]], [[წითელი ვარსკვლავის ორდენი|წითელი ვარსკვლავის]] და [[საპატიო ნიშანი|საპატიო ნიშნის ორდენებით]] და აგრეთვე სხვა მედლებით.
 
 იყო ქირურგთა საერთაშორისო ასოციაციის ნამდვილი წევრი, საქართველოს ქირურგთა რესპუბლიკური
 საზოგადოების თავმჯდომარის მოადგილე. თბილისის ქირურგთა სამეცნიერო საზოგადოების თავმჯდომარე.
