--- a/საქართველოს_საზოგადოებრივ_საქმეთა_ინსტიტუტი.mw
+++ b/საქართველოს_საზოგადოებრივ_საქმეთა_ინსტიტუტი.mw
@@ -1,3 +1,4 @@
+[[სურათი:SPA_logo.jpg|70px|left|გიპას ლოგო]]
 '''საქართველოს საზოგადოებრივ საქმეთა ინსტიტუტი''' ('''გიპა''', ინგ. Georgian Institute of Public Affairs, GIPA) დაარსდა [[თბილისი|თბილისში]] [[1994]] წელს საქართველოს მთავრობისა და [[აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემია|აშშ-ის სახელმწიფო მმართველობის ეროვნული აკადემიის]] ერთობლივი პროექტის საფუძველზე.
 
 პროექტის განხორციელებაში განსაკუთრებული როლი შეასრულა [[აშშ-ის საინფორმაციო სააგენტო|აშშ-ის საინფორმაციო სააგენტომ]] თბილისში, რომელმაც ბუდაპეშტის ადგილობრივი მმართველობისა და საჯარო სამსახურის ინსტიტუტთან და ვაშინგტონში ევრაზიის ფონდთან ერთად პირველ ეტაპზე დააფინანსა ინსტიტუტი. ინსტიტუტი თავდაპირველად განთავსებული იყო [[საქართველოს ტექნიკური უნივერსიტეტი|საქართველოს ტექნიკური უნივერსიტეტის]] შენობაში.
