--- a/26_ნოემბერი.mw
+++ b/26_ნოემბერი.mw
@@ -4,6 +4,7 @@
 
 == ამ დღეს დაბადებულნი ==
 *[[1915]] : [[რუბინშტეინი, მარკ]]  - საბჭოთა გეოლოგი
+* [[1919]] : [[ხეჩინაშვილი, სიმონ]] -  ქართველი ქირურგი
 == ამ დღეს გარდაცვლილნი ==
 * [[1822]] :  [[ჰარდენბერგი, კარლ ავგუსტ ფონ]]  - პრუსიის სახელმწიფო მოღვაწე.
 == დღესასწაულები ==
