*Empty MediaWiki Message*

--- a/თიბვა.mw
+++ b/თიბვა.mw
@@ -4,9 +4,9 @@
 სურათი:Geo95-137-2400.jpg|
 სურათი:Geo95-205-2400.jpg|
 სურათი:Maehmaschine bergmahd.jpg|
-</galler>
+</gallery>
 
 [[კატეგორია:სოფლის მეურნეობა]]
 
 [[de:Mähen]]
-[[nl:Maaien]]</gallery>
+[[nl:Maaien]]
