*Empty MediaWiki Message*

--- a/თმოგვის_ციხე.mw
+++ b/თმოგვის_ციხე.mw
@@ -1,4 +1,4 @@
-'''თმოგვის ციხე''', ისტორიული ციხე-ქალაქი [[საქართველოში|საქართველოში]], [[ჯავახეთი|ჯავახეთში]], [[მტკვარი|მდ. მტკვრის]] მარცხენა ნაპირზე (ახლანდელი [[ასპინძის რაიონი]], [[თმოგვი|სოფ. თმოგვში]]). წყაროებში პირველად იხსენიება X საუკუნეში. კონტროლს უწევდა გზას, რომელიც წინა აზიიდან მტკვრის ხეობით საქართველოში შემოდიოდა. თმოგვის ციხის დაწინაურება უნდა დაწყებულიყო IX-X საუკუნეებში, ქ. წუნდის დაკნინების შემდეგ. X საუკუნეში არაბებმა სცადეს მისი აღება, მაგრამ უშედეგოდ. X საუკუნის დასასრულს და XI საუკუნის დასაწყისში თმოგვის ციხე სამეფო ხელისუფლებას ემორჩილებოდა. [[1073]]-იდან დიდებული [[ქუაბულისძე, ნიანია|ნიანია ქუაბულისძე]] და მისი მემკვიდრენი ფლობდნენ, შემდგომ საუკუნეებში პერიოდულად - მსხვილი ფეოდალური საგვარეულოები - [[თორელები]], [[მხარგრძელები]], [[შალიკაშვილები]] და [[ჯაყელები]]. თმოგველ ფეოდალთა კარზე გაშლილი იყო ლიტერატურული საქმიანობა ([[სარგის თმოგველი]]). 1578 თმოგვის ციხეს ოსმალები დაეუფლნენ, ამის შემდეგ იგი თავისი მიმდებარე ტერიტორიით ოსმალეთის პოლიტიკური-ადმინისტრაციული ერთეულში - ახალქალაქის ლივაში შედიოდა. რუსეთ-ოსმალეთის 1828-1829 ომის შემდეგ ადრიანოპოლის საზავო ხელშეკრელების (1829) თანახმად ოსმალეთმა საქართველოს სხვა ტერიტორიასთან ერთად თმოგვის ციხეც დათმო.
+'''თმოგვის ციხე''', ისტორიული ციხე-ქალაქი [[საქართველო|საქართველოში]], [[ჯავახეთი|ჯავახეთში]], [[მტკვარი|მდ. მტკვრის]] მარცხენა ნაპირზე (ახლანდელი [[ასპინძის რაიონი]], [[თმოგვი|სოფ. თმოგვში]]). წყაროებში პირველად იხსენიება X საუკუნეში. კონტროლს უწევდა გზას, რომელიც წინა აზიიდან მტკვრის ხეობით საქართველოში შემოდიოდა. თმოგვის ციხის დაწინაურება უნდა დაწყებულიყო IX-X საუკუნეებში, ქ. წუნდის დაკნინების შემდეგ. X საუკუნეში არაბებმა სცადეს მისი აღება, მაგრამ უშედეგოდ. X საუკუნის დასასრულს და XI საუკუნის დასაწყისში თმოგვის ციხე სამეფო ხელისუფლებას ემორჩილებოდა. [[1073]]-იდან დიდებული [[ქუაბულისძე, ნიანია|ნიანია ქუაბულისძე]] და მისი მემკვიდრენი ფლობდნენ, შემდგომ საუკუნეებში პერიოდულად - მსხვილი ფეოდალური საგვარეულოები - [[თორელები]], [[მხარგრძელები]], [[შალიკაშვილები]] და [[ჯაყელები]]. თმოგველ ფეოდალთა კარზე გაშლილი იყო ლიტერატურული საქმიანობა ([[სარგის თმოგველი]]). 1578 თმოგვის ციხეს ოსმალები დაეუფლნენ, ამის შემდეგ იგი თავისი მიმდებარე ტერიტორიით ოსმალეთის პოლიტიკური-ადმინისტრაციული ერთეულში - ახალქალაქის ლივაში შედიოდა. რუსეთ-ოსმალეთის 1828-1829 ომის შემდეგ ადრიანოპოლის საზავო ხელშეკრელების (1829) თანახმად ოსმალეთმა საქართველოს სხვა ტერიტორიასთან ერთად თმოგვის ციხეც დათმო.
 
 თმოგვის ციხე აგებულია მაღალ კლდოვან მთაზე. რელიეფის თავისებურების გამო მისი ზღუდები სხვადასხვა სიმაღლეზეა ამოყვანილი. შედარებით უკეთ არის შემონახული ციხის დასავლეთი ნაწილი. აქ იგი კლდის დამრეც ფერდობზე სამ საფეხურად არის ამოშენებული კედელ-ბურჯებით. სამხრეთ-აღმოსავლეთით კედელი ებჯინებოდა ქვაბს, რომელიც კლდეში გაყვანილი საიდუმლო გვირაბით უკავშირდებოდა ზემოთ ციტადელს და ქვემოთ მდ. მტკვარს.  ციხის შუაგულში მცირე ფართობი მთლიანად ნაგებობებს ეჭირა. ბაზალტის ცოკოლზე აღმართული, გათლილი ტუფის კვადრებით ნაშენი, ორფერდა სახურავით გადახურული სწორკუთხა ნაგებობა, როგორც ჩანს, ეკლესია იყო. თმოგვის ციხის მნიშვნებლობაში ორი ძირითადი ფენა გაირჩევა. უძველესი ფენა ნაშენია ტუფის გათლილი კვადრების თანაბარი რიგებით. უხეშად დამუშავებული ნატეხი ქვით ნაგები კედელი კი, გვიანდელი აღდგენა-რეკონსტრუქციის ხანას მიეკუთვნება. ციხის კედლებს გარეთ, დასავლეთით ხევში, კლდის მასივში გამოკვეთილი წმ. ეფრემის ეკლესია, კლდეშივე კამოკვეთილი კანკელით, მეორე ეკლესიის ნანგრევებში შემორჩენილია XIII საუკუნის კედლის მხატვრობის ფრაგმენტები.
 
