--- a/თუშეთი.mw
+++ b/თუშეთი.mw
@@ -1,12 +1,12 @@
 [[Image:Eparchy_of_alaverdy.jpg|thumb|შენაქო]]
 
-თუშეთი [[საქართველო|საქართველოს]] ისტორიულ-გეოგრაფიული მხარეა.  იგი მდებარეობს [[კავკასიონი|კავკასიონის]] მთავარი ქედის გადაღმა, მის ჩრდილოეთ კალთაზე. აღმოსავლეთით თუშეთს საზღვრავს [[დაღესტანი]], დასავლეთით - [[ფშავი]] და [[ხევსურეთი]], ჩრდილოეთით - [[ჩეჩნეთი]], სამხრეთით - [[კახეთი]]. 
+'''თუშეთი''' [[საქართველო|საქართველოს]] ისტორიულ-გეოგრაფიული მხარეა.  იგი მდებარეობს [[კავკასიონი|კავკასიონის]] მთავარი ქედის გადაღმა, მის ჩრდილოეთ კალთაზე. აღმოსავლეთით თუშეთს საზღვრავს [[დაღესტანი]], დასავლეთით - [[ფშავი]] და [[ხევსურეთი]], ჩრდილოეთით - [[ჩეჩნეთი]], სამხრეთით - [[კახეთი]]. 
 
 
 თუშეთის უძველესი მოსახლეობის შესახებ საინტერესო ცნობები მოიპოვება წყაროებში. კერძოდ, ცნობა ფხოველთა (ფშავ-ხევსურთა) თუშეთში მიგრაციის შესახებ სარწმუნო ჩანს. ამას მხარს უმაგრებს გვარ-სახელები, ენობრივი დიალექტური შეხვედრები, სეხნია ტოპონიმები და სხვა. ეს შეიძლება მომხდარიყო ახ. წ.-ის IV ს-ის პირველ ნახევარში.
 
 
-[[ვახუშტი ბაგრატიონი|ვახუშტი ბაგრატიონის]] მიხედვით “თუშეთს უკავია ორი ხევი - გომეწრისა და პირიქითისა. გომეწრის ხევი აერთიანებს წოვათის და გომეწრის თემებს, ხოლო პირიქითისა - პირიქით და ჩაღმა თემებს”. დღევანდელი ადმინისტრაციული დაყოფით თუშეთის მთელი ტერიტორია [[კახეთის მხარე|კახეთის მხარის]] [[ახმეტის რაიონი|ახმეტის რაიონში]] შედის და 10 სოფელს მოიცავს, სადაც მუდმივი მოსახლეობა შემორჩა. თუშეთის ცენტრად ითვლება სოფელი [[ომალო]].
+[[ვახუშტი ბატონიშვილი|ვახუშტი ბაგრატიონის]] მიხედვით “თუშეთს უკავია ორი ხევი - გომეწრისა და პირიქითისა. გომეწრის ხევი აერთიანებს წოვათის და გომეწრის თემებს, ხოლო პირიქითისა - პირიქით და ჩაღმა თემებს”. დღევანდელი ადმინისტრაციული დაყოფით თუშეთის მთელი ტერიტორია [[კახეთის მხარე|კახეთის მხარის]] [[ახმეტის რაიონი|ახმეტის რაიონში]] შედის და 10 სოფელს მოიცავს, სადაც მუდმივი მოსახლეობა შემორჩა. თუშეთის ცენტრად ითვლება სოფელი [[ომალო]].
 
 
 თუშეთს ზოგჯერ მთათუშეთსაც უწოდებენ, რადგან თუშები ბარშიც სახლობენ, კერძოდ [[ახმეტის რაიონი|ახმეტისა]] და [[თელავის რაიონი|თელავის]] რაიონებში. მაგრამ “ბარის თუშეთი” სინამდვილეში კახეთია, ამიტომ ტერმინი “მთათუშეთი” არც ისტორიულადაა გამართლებელი და ვერც თანამედროვე ვითარებას ასახავს.
