*Empty MediaWiki Message*

--- a/4_თებერვალი.mw
+++ b/4_თებერვალი.mw
@@ -3,7 +3,7 @@
 
 ==დღის მოვლენები==
 
-*[[1945]] : დაიწყო ყირიმის კონფერენცია. 
+*[[1945]] : დაიწყო [[ყირიმის კონფერენცია 1945|ყირიმის კონფერენცია]]. 
 
 
 ==ამ დღეს დაბადებულნი==
