*Empty MediaWiki Message*

--- a/აგრიფა.mw
+++ b/აგრიფა.mw
@@ -1,3 +1,3 @@
-'''აგრიფა''' - [[იბერიის სამეფო|იბერიის მეფე]] [[ფარსმან III]] ქველის ეზოსმოძღვარი (II ს.). მოხსენიებულია [[სერაფიტი|სერაფიტის]] საფლავის ქვის წარწერაზე.
+'''აგრიფა''' - [[იბერიის სამეფო|იბერიის]] [[მეფე]] [[ფარსმან III]] ქველის ეზოსმოძღვარი (II ს.). მოხსენიებულია [[სერაფიტი|სერაფიტის]] საფლავის ქვის წარწერაზე.
 
 [[კატეგორია:იბერიის სამეფო]]
