--- a/გელა_ბეჟუაშვილი.mw
+++ b/გელა_ბეჟუაშვილი.mw
@@ -34,3 +34,6 @@
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი პოლიტიკური მოღვაწეები]]
 [[კატეგორია:დაბადებული 1967]]
+
+[[de:Gela Beschuaschwili]]
+[[en:Gela Bezhuashvili]]
