--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -94,7 +94,7 @@
 * კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 * ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
 
-„კავკასიური მეცხვარული ძაღლი“ ანუ „ქართული მეცხვარული ძაღლი“ '''ნაგაზი'''-ს ვულგარული ფორმებია.
+* „კავკასიური მეცხვარული ძაღლი“ ანუ „ქართული მეცხვარული ძაღლი“ '''ნაგაზი'''-ს ვულგარული ფორმებია.
 
 '''შენიშვნა''': Овчарка, Shepherd, Sheep dog არ შეიძლება ითარგმნოს როგორც „ნაგაზი“, არამედ ყოველთვის უნდა ითარგმნოს როგორც „მეცხვარული ძაღლი“ ან „ცხვრის ძაღლი“.
 
