*Empty MediaWiki Message*

--- a/გიბრალტარის_სრუტე.mw
+++ b/გიბრალტარის_სრუტე.mw
@@ -1,7 +1,7 @@
 [[სურათი:Strait of gibraltar.jpg|thumb|300px|გიბრალტარის სრუტე კოსმოსიდან.]]
-'''გიბრალტარის სრუტე''' (არაბ.: مضيق جبل طارق, ესპ.: Estrecho de Gibraltar) აერთებს ხმელთაშუა ზღვას ატლანტის ოკეანესთან. მეზღვაურები მას შემოკლებით "სტროგ"-ს უწოდებენ.
+'''გიბრალტარის სრუტე''' (არაბ.: مضيق جبل طارق, ესპ.: Estrecho de Gibraltar) აერთებს [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვას]] [[ატლანტის ოკეანე|ატლანტის ოკეანესთან]]. მეზღვაურები მას შემოკლებით "სტროგ"-ს უწოდებენ.
 
-კონტინენტებს შორის მოქცეული ხმელთაშუა ზღვის წლის აორთქლების დონე გაცილებით აღემატება მასში ჩადენილი მდინარეებისას. გიბრალტარის სრუტის შედარებით მაღალი ფუძე ლიმიტს უქმნის ატლანტის ნაკლებად მლაშე ცივი წლის შერევას თბილ ხმელთაშუა ზღვის წლებთან. ეს უკანასკნელი იმდენად მარილიანია, რომ ის მუდმივად შემოდენილი ატლანტის წლის ქვეშ იძირება და ქმნის ზემლაშე ქვედა წყლის ფენას, რომელსაც ხმელთაშუა განადენს უწოდებენ. ის მიედინება კონტინენტიდან შორს და ქვევით, ჰკარგავს მარილიანობას, სანამ დაახ. 1000 მეტრის სიღრმეზე ატლანტის წყალთან შერევით არ გაწონასწორდება.
+[[კონტინენტი|კონტინენტებს]] შორის მოქცეული ხმელთაშუა ზღვის წლის აორთქლების დონე გაცილებით აღემატება მასში ჩადენილი მდინარეების წყლების მასას. გიბრალტარის სრუტის შედარებით მაღალი ფუძე ლიმიტს უქმნის ატლანტის ნაკლებად მლაშე ცივი წლის შერევას თბილ ხმელთაშუა ზღვის წლებთან. ეს უკანასკნელი იმდენად მარილიანია, რომ ის მუდმივად შემოდენილი ატლანტის წლის ქვეშ იძირება და ქმნის ზემლაშე ქვედა წყლის ფენას, რომელსაც ხმელთაშუა განადენს უწოდებენ. ის მიედინება კონტინენტიდან შორს და ქვევით, ჰკარგავს მარილიანობას, სანამ დაახ. 1000 მეტრის სიღრმეზე ატლანტის წყალთან შერევით არ გაწონასწორდება.
 
 სახელი მომდინარეობს არაბულიდან "ჯებელ ალ ტარიქ", რაც ტარიქის ქვას ნიშნავს. სახელი მიუთითებს ბერბერ მუსლიმთა გენერალ ტარიქ იბნ-ზიიადზე, რომელმაც იბერიის ნახევარკუნძული 711 წელს დაიპყრო.
 
