*Empty MediaWiki Message*

--- a/დარდანელის_სრუტე.mw
+++ b/დარდანელის_სრუტე.mw
@@ -1,4 +1,4 @@
-[[სურათი:Dardanelles map2.png|დარდანელის სრუტე]]
+[[სურათი:Dardanelles map2.png|thumb|250px|დარდანელის სრუტე]]
 '''დარდანელი''' (თურქ.: Çanakkale Boğazı, ბერძ.: Δαρδανελλια), ადრე ცნობილი როგორც ''ჰელესპონტი'', არის ვიწრო სრუტე ჩრდილოდასავლეთ [[თურქეთი|თურქეთში]], რომელიც [[ეგეოსის ზღვა|ეგეოსის ზღვას]] [[მარმარილოს ზღვა|მარმარილოს ზღვასთან]] აერთებს. მისი კოორინატებია 40°13′N 26°26′E. სრუტე სიგრძით 61 კმ-ია და მხოლოდ 1,2 - 6 კმ მერყეობს სიგანეში, საშუალო სიღრმით 55 მ, ხოლო მაქსიმალური სიღრმით 82 მ. წყალი სრუტის გასწვრივ ორივე მიმართულებით მიედინება მარმარილოს ზღვიდან ეგეოსისკენ ზედაპირის დინებით, საპირისპიროდ კი ქვემო დინებით.
 
 [[ბოსფორი|ბოსფორის სრუტის]] მსგავსად ის [[ევროპა|ევროპას]] (გალიპოლის ნახევარკუნძულთან) [[აზია|აზიისგან]] ჰყოფს. სრუტე საერთაშორისო წყლებს ეკუთვნის და ბოსფორთან ერთად [[შავი ზღვა|შავ ზღვას]] [[ხმელთაშუა ზღვა|ხმელთაშუასთან]] აკავშირებს.
