*Empty MediaWiki Message*

--- a/იენს_ფინკ-იენსენი.mw
+++ b/იენს_ფინკ-იენსენი.mw
@@ -60,6 +60,7 @@
 [[hu:Jens Fink-Jensen]]
 [[id:Jens Fink-Jensen]]
 [[is:Jens Fink-Jensen]]
+[[it:Jens Fink-Jensen]]
 [[ja:イェンス・フィンク＝イェンセン]]
 [[kl:Jens Fink-Jensen]]
 [[lt:Jensas Finkas-Jensenas]]
