*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -1,4 +1,8 @@
 Dio
+
+[[Image:Dio-logo.JPG|200px|right]]
+[[Image:Dio01.jpg|thumb|Ronnie James Dio|200px|right|Ronnie James '''Dio''']]
+
   დიო არის მძიმე მეტალის ჯგუფი, შექმნილი ვოკალისტ რონი ჯეიმს დიოს მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია Vivian Campbell (გიტარა), Jimmy Bain (ბას გიტარა) და Vinny Appice (დასარტყამი ინსტრუმენტები).
   1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი Claude Schnell.
   მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომი
