*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -1,4 +1,4 @@
-[[სურათი:Dio_logo.JPG|200px|right]]
+[[სურათი:Dio_logo.ჯპგ|200px|right]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|Ronnie James '''Dio''']]
 
   დიო არის [[heavy metal music|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია Vivian Campbell (გიტარა), Jimmy Bain (ბას გიტარა) და Vinny Appice (დასარტყამი ინსტრუმენტები).
