*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -5,12 +5,6 @@
 
 1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი Claude Schnell.
 
-მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart.
+მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart. 
 
-
-
-[[en: Dio]]
-[[fr:Dio]]
-[[it:Dio (gruppo musicale)]]
-[[fi:Dio]]
-[[sv:Dio]]
+!!!გვერდზე მუსაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
