*Empty MediaWiki Message*

--- a/იენს_ფინკ-იენსენი.mw
+++ b/იენს_ფინკ-იენსენი.mw
@@ -1,6 +1,6 @@
 '''იენს ფინქ-იენსენი''' (''Jens Fink-Jensen'')(* [[19 დეკემბერი]], [[1956]], [[კოპენჰაგენი]])  - [[დანიელები |  დანიელი]] პოეტი, მწერალი, ფოტოგრაფი, კომპოზიტორი, არქიტექტორი.
 
-==Biography==
+==ბიოგრაფია==
 იენს ფინქ-იენსენის დებიუტი, როგორც მხატვრული ნაწარმოების ავტორის, შედგა [[1975]] წლის 4 ივნისს, როდესაც მისი მოკლე მოთხრობა " Juni 1995 " ("1995 წლის ივნისი") გამოქვეყნდა ყოველდღიურ გაზეთში "Information" (ინფორმაცია), ხოლო როგორც პოეტის - [[1976]] წლის მაისში, როდესაც მისი ოთხი ლექსი გამოქვეყნდა ლიტერატურული ჟურნალის - "Hvedekorn"  76/1 ნომერში.
 
 მისი პირველი წიგნი, ლექსების კრებული სახელწოდებით "Verden i et øje "(სამყარო თვალის ერთი შევლებით) გამოქვეყნდა 1981 წლის 19 ოქტომბერს, ხოლო მისი პირველი პროზაული ნაწარმოებები  მოკლე მოთხრობების კრებული, სახელწოდებით  "Bæsterne" (მხეცები) გამოქვეყნდა [[1986]] წლის 5 ივნისს. [[1994]] წლის 18 მარტს მან გამოაქვეყნა საბავშვო წიგნი  "Jonas og konkylien "(იონასი და ლოკოკინას ნიჟარა).
@@ -44,6 +44,8 @@
 [http://www.jensfink.dk/english Jens Fink-Jensen Online]
 
 [[კატეგორია: დანიელები]]
+[[კატეგორია:დანიელი პოეტები]]
+[[კატეგორია:დანიელი ფოტოგრაფები]]
 [[კატეგორია:დაბადებული  1956]]
 
 [[ar:يانس فينك يانسن]]
