--- a/დიო.mw
+++ b/დიო.mw
@@ -1,10 +1,14 @@
 [[სურათი:Dio_logo.jpg|thumb|Ronnie James Dio|200px|right|დიოს ლოგო]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|რონი ჯეიმს დიო]]
 
-'''დიო''' არის [[მძიმე მეტალის მუსიკა|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიო|რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია Vivian Campbell (გიტარა), Jimmy Bain (ბას გიტარა) და Vinny Appice (დასარტყამი ინსტრუმენტები).
+დიო არის [[heavy metal music|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია Vivian Campbell (გიტარა), Jimmy Bain (ბას გიტარა) და Vinny Appice (დასარტყამი ინსტრუმენტები).
 
 1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი Claude Schnell.
 
-მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart. 
+მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart.
 
-!!!გვერდზე მუსაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
+1986 წელს Vivian Campbell ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა Craig Goldy-მ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი Rowan Robertson.
+
+1986 წელს Vivian Campbell ჯგუფიდან წავიდა, ის შეცვალა გიტარისტმა Craig Goldy-მ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი Rowan Robertson.
+
+!!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
